update all fuction and added class